// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Pagination Defaults smoke-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 15
    </div>
    <ul class="_paginationList_1frpa_20">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination HidePrevNextButtonTitle smoke-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_19ayz_1 _button_medium_19ayz_42"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_19ayz_26"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r3:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r3:">
              Neste
            </title>
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination Sibling play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 21–30 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li class="_element_leftArrow_1xa21_31">
        <button class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8  _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M15.9 17.98L9.8 11.88L15.9 5.78L14.1 3.88L6.1 11.88L14.1 19.88L15.9 17.98Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            5
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithAttributes play-test 1`] = `
<div data-test-block="true">
  <nav id="htmlId"
       class="_pagination_1frpa_5 dummyClassname"
       lang="nb"
       data-testid="123ID"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithControlled play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 6–10 av 30
    </div>
    <ul class="_paginationList_1frpa_20">
      <li class="_element_leftArrow_1xa21_31">
        <button class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8  _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M15.9 17.98L9.8 11.88L15.9 5.78L14.1 3.88L6.1 11.88L14.1 19.88L15.9 17.98Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithCustomAriaLabel play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Egen tekst på nav-elementets aria-label"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithHiddenPageSummary play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class="_pagination_summaryhide_1frpa_39"
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20 _paginationList_summaryhidden_1frpa_35">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithListLength play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 9–12 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li class="_element_leftArrow_1xa21_31">
        <button class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8  _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M15.9 17.98L9.8 11.88L15.9 5.78L14.1 3.88L6.1 11.88L14.1 19.88L15.9 17.98Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            5
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            18
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithListLimit smoke-test 1`] = `
<div data-test-block="true">
  <ul class="_list_1xbs1_1 _list_withBullet_1xbs1_8 _list_hasSpacing_1xbs1_11">
    <li class="_element_1b7zf_1">
      1 Donald Duck
    </li>
    <li class="_element_1b7zf_1">
      2 Robbie Wiliams
    </li>
    <li class="_element_1b7zf_1">
      3 Minnie Mouse
    </li>
    <li class="_element_1b7zf_1">
      4 Katy Perry
    </li>
    <li class="_element_1b7zf_1">
      5 Langbein
    </li>
  </ul>
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–5 av 42
    </div>
    <ul class="_paginationList_1frpa_20">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            9
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithNavigation play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 61–70 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li class="_element_leftArrow_1xa21_31">
        <button class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8  _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M15.9 17.98L9.8 11.88L15.9 5.78L14.1 3.88L6.1 11.88L14.1 19.88L15.9 17.98Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            5
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithPageSummary play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithRef smoke-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
       id="dummyIdForwardedFromRef"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_1xa21_25"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithTextNextPref play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 11–20 av 70
    </div>
    <ul class="_paginationList_1frpa_20">
      <li class="_element_leftArrow_1xa21_31">
        <button class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8  _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M15.9 17.98L9.8 11.88L15.9 5.78L14.1 3.88L6.1 11.88L14.1 19.88L15.9 17.98Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_1xa21_1"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            5
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_1xa21_1"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_1xa21_34">
        <button class="_button_r1hjf_1  _button_withIconRight_r1hjf_8 _button_1xa21_1"
                data-brightness="default"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_1b9cs_2 _systemIcon_medium_1b9cs_10 _icon_r1hjf_42"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M8.10001 5.80002L14.2 11.9L8.10001 18L10 19.9L18 11.9L10 3.90002L8.10001 5.80002Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
